<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="media">Медиатека</string>
    <string name="setting">Настройки</string>
    <string name="search">Поиск</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="black_themes">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support_write">Написать в поддержку</string>
    <string name="agreement_user">Пользовательское соглашение</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="shareButton">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="supportSubject">"Сообщение разработчикам и разработчицам приложения Playlist Maker!"</string>
    <string name="supportMessage">"Спасибо разработчикам и разработчицам за крутое приложение!"</string>
    <string name="supportMail">"marsel21vek@ya.ru"</string>
    <string name="agreementUser">"https://yandex.ru/legal/practicum_offer/"</string>
    <string name="input_hint">"Поиск"</string>
    <string name="no_reply">"No reply"</string>
    <string name="favourites">"Избранные треки"</string>
    <string name="playlist">"Плейлисты"</string>
    <string name="startProgress">"00:00"</string>

    <string name="new_play_list">"Новый плейлист"</string>
    <string name="playlist_name">"Название*"</string>
    <string name="playlist_description">"Описание"</string>
    <string name="create">Создать</string>
    <string name="noTracks">В этом плейлисте нет списка треков, которым можно поделиться</string>




    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью "&#xA;" "&#xA;" Загрузка не удалась. Проверьте "&#xA;" подключение к интернету </string>
    <string name="no_internet_connection">Нет подключение к интернету </string>
    <string name="no_connection">Ошибка связи</string>
    <string name="Update">Обновить</string>
    <string name="Clear_history">Очистить историю</string>
    <string name="youLooking">Вы искали</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="currentTrackTime">00:00</string>

    <string name="favourites_empty">Ваша медиатека пуста </string>
    <string name="playlist_empty">Вы не создали "&#xA;" ни одного плейлиста </string>
    <string name="new_playlist"> Новый плейлист </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_track_playlist">Добавить в плейлист</string>
    <string name="tracks">" "треков</string>

    <string name="add_playlist">Добавлено в плейлист</string>
    <string name="finishAddPlayList">Завершить создание плейлиста?</string>
    <string name="saveData">Все несохраненные данные будут потеряны</string>
    <string name="cansel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="delete_track">Хотите удалить трек?</string>
    <string name="delete_play_list">Хотите удалить плейлист «%1$s»?</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="menuShare">Поделится</string>
    <string name="editPlayList">Редактировать информацию</string>
    <string name="deletePlayList">Удалить плейлист</string>
    <string name="editPlayListDetails">Редактировать</string>
    <string name="savePlayList">Сохранить</string>
    <string name="no_track_play_list">В плейлисте «%1$s» нет треков</string>


    <plurals name="plurals_track">
        <item quantity="zero">нет треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>

    <plurals name="plurals_time">
        <item quantity="zero">0</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>




</resources>