<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".media.ui.PlayListDetailsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/Player_constraintGuide" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/Player_constraintGuide" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/backButtonPlayer"
        style="@style/ToolbarTitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back"
        app:title="@string/new_playlist"
        app:titleTextAppearance="@style/ToolbarTitleText" />


    <ImageView
        android:id="@+id/imagePlaylistDetails"
        style="@style/imagePlaylistDetails"
        android:layout_marginTop="28dp"
        android:background="@drawable/dotted_border"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/backButtonPlayer"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlistNameText"
        style="@style/playlistText"
        android:layout_marginTop="32dp"
        android:hint="@string/playlist_name"
        app:cursorColor="@color/blue"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/imagePlaylistDetails">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlistNameInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"

            android:textCursorDrawable="@drawable/cursor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlistDescriptionText"
        style="@style/playlistText"
        android:layout_marginTop="32dp"
        android:hint="@string/playlist_description"
        android:imeOptions="actionDone"
        android:singleLine="true"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/playlistNameText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlistDescriptionInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/newPlayListButton"
        style="@style/createPlaylistButton"
android:elevation="0dp"
        android:stateListAnimator="@null"
        android:layout_marginBottom="8dp"
        android:background="@drawable/player_list_button"
        android:enabled="false"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline" />

</androidx.constraintlayout.widget.ConstraintLayout>

